初步完成项目后端，重构代码沙箱的工厂方法模式实现